调整rest使用的dto
